qdrant-landing/themes/qdrant/static/css/lang-switcher.css
.highlight + .highlight {
    display: none;
}
.lang-tabs {
    display: block;
    min-height: 27px;
}
.lang-tabs__button {
    padding: 2px 4px 5px;
    background: #dcdcdc;
    color: inherit;
    cursor: pointer;
}
.lang-tabs__button.active {
    background: #8d8d8d;
    color: #fff;
}
.lang-tabs__button:not(:last-of-type) {
    border-right: 1px solid #fff;
}

